# career-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  config.json  docker-compose.yml  main.py  pyproject.toml
agents/career_intelligence/: .env.example  __init__.py  agent.py  builder.py  config.py  prompts.py
alembic/: env.py
alembic/versions/: 20260503_01_create_skill_resources.py  20260503_02_add_abstracts_to_skill_resources.py  20260503_03_create_async_match_tables.py  20260503_04_add_match_retry_schedule.py
configs/: default.json
data/: it_skill_online_references_expanded.csv
models/: __init__.py  confidence.py  job.py  llm.py  match.py  resource.py  resource_type.py
models/config/: llm.py
modules/: __init__.py  agent_runtime.py
modules/api/: __init__.py  ingestion.py  mappers.py  schemas.py
modules/builder/llm/: builder.py  const.py
modules/candidates/: __init__.py  profile.py  schemas.py
modules/config/: database.py  llm.py  resources.py
modules/database/: client.py
modules/error/: __init__.py  base.py  common.py
modules/extractor/: html.py  semantic_snapshot.js
modules/llm/: builder.py  const.py
modules/logging/: __init__.py  logger.py
modules/matches/: __init__.py  finalization.py  repository.py  schemas.py  state.py
modules/resources/: github.py  prompts.py  repository.py  research_agent.py  schemas.py  service.py  tools.py
modules/task_queue/: __init__.py  config.py  rabbitmq.py
modules/tools/: extract_jd_requirements.py  finalize_match_output.py  prioritise_skill_gaps.py  prompts.py  research_skill_resources.py  score_candidate_against_requirements.py  structured_llm.py  wrapper.py
modules/utils/: __init__.py  adk_events.py  callback.py  config.py  llm.py  text.py  trace.py
modules/worker/: __init__.py  run.py
services/litellm/: config.yaml
tests/: conftest.py  test_adk_event_streaming.py  test_agent_builder.py  test_candidate_profile_ingestion.py  test_extract_jd_requirements_tool.py  test_extractor_html.py  test_finalize_match_output_tool.py  test_match_repository_validation.py  test_prioritise_skill_gaps_tool.py  test_research_skill_resources_tool.py  test_resource_config.py  test_resource_github.py  test_resource_research_agent.py  test_score_candidate_against_requirements_tool.py  test_tool_error_callback.py
tests/data/: README.md
tests/data/candidate_profile/: sample_candidate_profile_1.md  sample_candidate_profile_2.md  sample_candidate_profile_3.md
tests/data/jobreq/: sample_jobreq.md
tests/eval/: run_tool_flows.py
