[project]
name = "career-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk[extensions]>=1.32.0",
    "playwright>=1.55.0",
    "safe-result>=4.0.3",
    "sqlalchemy>=2.0.44",
    "alembic>=1.18.4",
    "psycopg[binary]>=3.2.12",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["agents", "modules"]


[tool.ruff.lint.isort]
known-first-party = ["modules"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ty.environment]
python-version = "3.12"
root = ["."]

[tool.ty.rules]
all = "error"

[tool.ty.terminal]
error-on-warning = true
